--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <footer></footer>
    
     <script src="./js/colorize.js" type="module"></script>
-    <!-- <script src="./js/practice.js" ></script> -->
+    <script src="./js/practice.js" ></script>
     <!-- <script src="./js/1.js" type="module"></script> -->
     <!-- <script src="./js/2.js" type="module"></script> -->
     <!-- <script src="./js/3.js" type="module"></script> -->
